--- a/docs/State/ZK4362.md
+++ b/docs/State/ZK4362.md
@@ -79,3 +79,4 @@ echo dataDir=<zookeeper> >> <zookeeper>/conf/zoo.cfg
 ```
 <T2C>/experiments/detection/zookeeper/ZK-4362/trigger_ZK-4362.sh <zookeeper>
 ```
+7. Check logs/ for the result
